--- a/docker-compose/withPostgresAndWorker/.env
+++ b/docker-compose/withPostgresAndWorker/.env
@@ -1,5 +1,5 @@
-POSTGRES_USER=changeUser
-POSTGRES_PASSWORD=changePassword
+POSTGRES_USER=test1
+POSTGRES_PASSWORD=test1
 POSTGRES_DB=n8n
 
 POSTGRES_NON_ROOT_USER=changeUser
